Added grayscale wheel scheme and adjustable resolution multiplier, which increases the resolution of the end image at the expense of more processing power and disk space